--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@
 
 .item img
 {
-    position: absolute;
+    /*position: absolute;
     top: 0;
-    left: 0;
+    left: 0;*/
     min-height: 500px;
 }
 
